--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tanstack/react-query": "^4.29.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.29.12",
